--- a/StackFlair.Web/web.config
+++ b/StackFlair.Web/web.config
@@ -6,13 +6,12 @@
   -->
 
 <configuration>
-	<appSettings>
-		<add key="FlairDuration" value="12"/>
-	</appSettings>
+	<appSettings configSource="AppSettings.config" />
 	<connectionStrings configSource="ConnectionStrings.config" />
     <system.web>
 	    <!--<customErrors mode="Off"/>-->
         <compilation debug="true" targetFramework="4.0" />
+	    <customErrors mode="On" />
     </system.web>
 	<system.webServer>
 		<modules >
