--- a/StackFlair.Mvc/StackFlair.Mvc.csproj
+++ b/StackFlair.Mvc/StackFlair.Mvc.csproj
@@ -121,7 +121,9 @@
     <Content Include="Scripts\jquery-ui-1.8.5.custom.min.js" />
     <Content Include="Scripts\Soapi.min.js" />
     <Content Include="Views\Home\Default.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
